<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/left_drawer_item_bg_normal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/logout_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.0"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16.0dip"
            android:layout_marginTop="34.0dip"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/qzone_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_drawer_qzone" />

            <ImageView
                android:id="@+id/weibo_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:src="@drawable/ic_drawer_weibo" />

            <ImageView
                android:id="@+id/tencent_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_drawer_tencent" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13.0dip"
            android:text="@string/left_drawer_no_login_tip"
            android:textColor="@color/left_drawer_no_login_tip_text"
            android:textSize="11.0sp" />
    </LinearLayout>

    <ImageView style="@style/left_drawer_item_line" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/search_btn"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_search"
                    android:text="@string/left_drawer_item_search" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/favorite_btn"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_favorite"
                    android:text="@string/left_drawer_item_favorite" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/message_btn"
                style="@style/left_drawer_item_layout" >

                <TextView
                    android:id="@+id/message_text"
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_message"
                    android:text="@string/left_drawer_item_message" />

                <TextView
                    android:id="@+id/top_message_count"
                    style="@style/left_drawer_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="25.0dip"
                    android:layout_marginTop="6.0dip"
                    android:layout_toRightOf="@id/message_text"
                    android:background="@drawable/left_drawer_count_bg"
                    android:text="8" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/app_activity_btn"
                style="@style/left_drawer_item_layout" >

                <TextView
                    android:id="@+id/app_activity_text"
                    style="@style/left_drawer_item_text"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/left_drawer_activity_selector"
                    android:text="@string/left_drawer_item_activity" />

                <TextView
                    android:id="@+id/top_appactivity_count"
                    style="@style/left_drawer_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="25.0dip"
                    android:layout_marginTop="6.0dip"
                    android:layout_toRightOf="@id/app_activity_text"
                    android:background="@drawable/left_drawer_count_bg" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/setting_btn"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_setting"
                    android:text="@string/left_drawer_item_setting" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/feedback_btn"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_feedback"
                    android:text="@string/left_drawer_item_feedback" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/appstore_btn"
                style="@style/left_drawer_item_layout"
                android:visibility="visible" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_appstore"
                    android:text="@string/left_drawer_item_appstore" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>